--- a/SDUCanteen/pom.xml
+++ b/SDUCanteen/pom.xml
@@ -96,6 +96,17 @@
 			<artifactId>passay</artifactId>
 			<version>1.6.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.twilio.sdk/twilio -->
+		<dependency>
+			<groupId>com.twilio.sdk</groupId>
+			<artifactId>twilio</artifactId>
+			<version>10.5.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
