--- a/SDUCanteen/src/main/resources/application.properties
+++ b/SDUCanteen/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.mail.username=nurbekulyzhandos@gmail.com
 spring.mail.password=ovey cfsw kbvx fpnb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui/index.html
