--- a/SDUCanteen/Dockerfile
+++ b/SDUCanteen/Dockerfile
@@ -1,3 +1,5 @@
 FROM eclipse-temurin:17.0.12_7-jre-ubi9-minimal
+WORKDIR /app
 COPY target/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+EXPOSE 8080
+CMD ["java", "-jar", "app.jar"]
