--- a/SDUCanteen/src/main/resources/application.properties
+++ b/SDUCanteen/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=zhandos04
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
